# paper-db

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
app/: __init__.py
app/templates/: index.html
schema/: init.sql
scripts/database/init/: create.sql
scripts/docker/: init.sh
